--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="https://www.github.com/">Yousif Paulus</a>.
+      >. Coded by <a href="https://www.github.com/yousifpa98">Yousif Paulus</a>.
     </div>
   </body>
 </html>
